src/objects/Issue_Defect__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues_Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Cause__c</fullName>
        <label>Defect Cause</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Status__c</fullName>
        <label>Defect Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Type__c</fullName>
        <label>Defect Type</label>
        <picklist>
            <picklistValues>
                <fullName>Code/Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interaface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Id__c</fullName>
        <label>Issue Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Status__c</fullName>
        <label>Issue Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Logged_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logged By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logged_Date__c</fullName>
        <label>Logged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can Wait</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Issues/Defects</relationshipLabel>
        <relationshipName>Issues_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope</label>
        <referenceTo>Scope__c</referenceTo>
        <relationshipLabel>Issues/Defects</relationshipLabel>
        <relationshipName>Issues_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <label>Steps to Reproduce</label>
        <type>TextArea</type>
    </fields>
    <label>Issue/Defect</label>
    <nameField>
        <label>Issue/Defect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues/Defects</pluralLabel>
    <recordTypes>
        <fullName>Defect</fullName>
        <active>true</active>
        <label>Defect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Issue</fullName>
        <active>true</active>
        <label>Project Issue</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>